add_library(PPYCore STATIC
        DistinctMetadataAnalysis.cpp
        DomInformationAnalysis.cpp
        ExecutionState.cpp
        Executor.cpp
        LoopInformationAnalysis.cpp
        LoopSummaryAnalysis.cpp
        LoopSummaryState.cpp
        LoopSummaryStateMachine.cpp
        PLang.cpp
        SliceGraph.cpp
        SymbolicExecution.cpp
        SymbolicExecutionTree.cpp
        )